remove class Identifiers